--- a/course/config.json
+++ b/course/config.json
@@ -3,11 +3,11 @@
   "_courseId": "5996c8d2d1ce4b5f68048826",
   "__v": 0,
   "_tracker": {
-    "_isEnabled": true,
-    "_auth": "../../api/isAuthenticated",
-    "_login": "../../api/login",
+    "_pushData": "../../api/usersCourse",
     "_getData": "../../api/usersCourse",
-    "_pushData": "../../api/usersCourse"
+    "_login": "../../api/login",
+    "_auth": "../../api/isAuthenticated",
+    "_isEnabled": false
   },
   "_scorm": {
     "_reporting": {
